sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: not found: value i
		i = 0
                ^AlgCombSort:14: error: not found: value i
		while(i+ecart < getNombreValeurs())
                      ^AlgCombSort:16: error: not found: value i
			if(plusPetit(i+1,i))
                                     ^AlgCombSort:18: error: not found: value i
				echange(i,i+1)
                                        ^AlgCombSort:21: error: not found: value i
			i += 1
                        ^